group form visibility bug issue resolved

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -695,7 +695,7 @@
 
 .members-user-card .user-image{
   width:50px;
-  aspect-ratio: 4/4.5;
+  aspect-ratio:1/1;
   object-fit: cover;
   object-position: top center;
 }
@@ -880,7 +880,7 @@
 .group-input{
   border:none;
   border-bottom: 2px solid rgba(122, 132, 143, 0.349);
-  width:85%;
+  width:100%;
   font-size: 1.1rem;
   font-weight: 400;
   background-color: transparent;
@@ -896,22 +896,27 @@
 .group-input-box{
   display: grid;
   position:relative;
+  place-items: center;
   width:100%;
   flex-grow: 1;
 }
 
+.group-input-frame{
+  position: relative;
+  width:90%;
+}
+
 .group-input-box .group-subject-heading{
   position: absolute;
-  left:2.5em;
-  top:40%;
+  left:0;
+  top:0;
   color:rgb(89, 111, 117);
   transition:all 300ms ease-in-out;
 }
 
 .upandown{
-  left:3.2em !important;
   font-size: 0.8rem;
-  top:23% !important;
+  top:-85% !important;
 }
 
 #group-details-footer{
